# webhook-listener

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
docs/superpowers/plans/: 2026-05-07-webhook-listener.md
docs/superpowers/specs/: 2026-05-07-webhook-listener-design.md
migrations/: 0001_init.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
src/routes/: dashboard.rs  ingest.rs  mod.rs
static/: styles.css
templates/: _list.html  endpoint.html  index.html  layout.html  login.html  webhook_detail.html
tests/: e2e.rs  http.rs
